<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_gravity="fill_vertical"
        android:layout_marginBottom="?attr/actionBarSize"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id = "@+id/welcome_text"
                android:textStyle="bold|italic"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/welcome_text_all"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id = "@+id/paragraph"
                android:layout_below="@+id/welcome_text"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/paragraph_all"
                android:layout_marginStart="15dp"

                />

            <TextView
                android:id = "@+id/tabs_text"
                android:textStyle="bold|italic"
                android:layout_below="@+id/paragraph"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/tabs_text_all"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"

                />

            <TextView
                android:id = "@+id/tabs_paragraph"
                android:layout_below="@+id/tabs_text"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/tabs_paragraph_all"
                android:layout_marginStart="15dp"

                />


            <TextView
                android:id = "@+id/scroll_down_text"
                android:textStyle="bold|italic"
                android:layout_below="@+id/tabs_paragraph"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/scroll_down_text_all"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                />

            <TextView
                android:id = "@+id/scroll_down_paragraph"
                android:layout_below="@+id/scroll_down_text"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/scroll_down_paragraph_all"
                android:layout_marginStart="15dp"

                />

            <ImageView
                android:id="@+id/refresh_image"
                android:layout_below="@id/scroll_down_paragraph"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_refresh_black_48dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id = "@+id/thank_you_text"
                android:textStyle="bold|italic"
                android:layout_below="@+id/refresh_image"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/thank_you_text"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                />

            <TextView
                android:id = "@+id/thank_you_paragraph"
                android:textStyle="italic"
                android:layout_below="@+id/thank_you_text"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/thank_you_paragraph"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                />

            <Button
                android:id = "@+id/all_projects_acitivity_info_button"
                android:layout_below="@+id/thank_you_paragraph"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/view_team_button"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/menu_optionbar"
        app:itemBackground="@color/darkBlue"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        android:background="@color/darkBlue"
        />
</android.support.design.widget.CoordinatorLayout>
