<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_gravity="fill_vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >


            <ImageView
                android:id="@+id/team_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/nicepicture" />

            <TextView
                android:id = "@+id/project_name_text"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/project_name_text"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                />


            <TextView
                android:id = "@+id/project_name_from_DB"
                android:layout_below="@+id/project_name_text"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                />

            <TextView
                android:id = "@+id/abstract_text"
                android:layout_below="@+id/project_name_from_DB"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/abstract_text"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                />


            <TextView
                android:id = "@+id/abstract_from_DB"
                android:layout_below="@+id/abstract_text"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                />

            <TextView
                android:id = "@+id/team_members_text"
                android:layout_below="@+id/abstract_from_DB"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/team_members_text"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_below="@+id/team_members_text"
                android:id = "@+id/team_members_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                >

            </LinearLayout>

            <Button
                android:id = "@+id/view_team_button"
                android:layout_below="@+id/team_members_linear_layout"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/view_team_button"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="50dp"
                />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/menu_optionbar"
        app:itemBackground="@color/darkBlue"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        android:background="@color/darkBlue"
        />
</android.support.design.widget.CoordinatorLayout>
